--- a/website/index.html
+++ b/website/index.html
@@ -7,5 +7,18 @@
   <body>
       <h1>Pratik Ghule</h1>
       <h4>CS Student</h4>
+    
+      <ul>
+    <li>
+      <a href="https://github.com/pratikghule">Github</a>
+    </li>
+    <li>
+      <a href="https://medium.com/@pratikghule">Medium</a>
+    </li>
+    <li>
+      <a href="https://linkedin.com/in/pratik-ghule92">Linkedin</a>
+    </li>
+  </ul>
+    
   </body>
 </html>
