--- a/website/index.html
+++ b/website/index.html
@@ -7,6 +7,10 @@
   <body>
       <h1>Pratik Ghule</h1>
       <h4>CS Student</h4>
+      <p>
+          Computer Science student, web developer, blah blah blah.
+          Thanks for visiting my website.
+      </p>
     
       <ul>
     <li>
