--- a/website/index.html
+++ b/website/index.html
@@ -5,6 +5,7 @@
   </head>
   
   <body>
+      <img src="img/pic 1.jpg" width="200" />
       <h1>Pratik Ghule</h1>
       <h4>CS Student</h4>
       <p>
