--- a/website/index.html
+++ b/website/index.html
@@ -5,19 +5,19 @@
   </head>
   
   <body>
-	<div>
-		<div>
+	<div class="wrapper">
+		<div class="left">
 		  <img src="img/pic 1.jpg" width="200" />
 		  <h1>Pratik Ghule</h1>
 		  <h4>CS Student</h4>
 		</div>
-		<div>
-			<p>
+		<div class="right">
+			<p class="bio">
 				  Computer Science student, web developer, blah blah blah.
 				  Thanks for visiting my website.
 			</p>
 
-			<ul>
+			<ul class="social-links">
 				<li>
 				  <a href="https://github.com/pratikghule">Github</a>
 				</li>
