--- a/website/index.html
+++ b/website/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Pratik Ghule</title>
+    <link rel="stylesheet" type="text/css" href="style.css">  
   </head>
   
   <body>
