--- a/website/index.html
+++ b/website/index.html
@@ -8,9 +8,9 @@
   <body>
 	<div class="wrapper">
 		<div class="left">
-		  <img src="img/pic 1.jpg" width="200" />
-		  <h1>Pratik Ghule</h1>
-		  <h4>CS Student</h4>
+		  <img class="profile-pic" src="img/pic 1.jpg" width="200" />
+		  <h1 class="name">Pratik Ghule</h1>
+		  <h4 class="subtitle">CS Student</h4>
 		</div>
 		<div class="right">
 			<p class="bio">
