--- a/index.html
+++ b/index.html
@@ -24,10 +24,16 @@
 				  <a href="https://github.com/pratikghule">Github</a>
 				</li>
 				<li>
-				  <a href="https://medium.com/@pratikghule">Medium</a>
+				  <a href="https://medium.com/@pratikghulealpha">Medium</a>
 				</li>
 				<li>
-				  <a href="https://linkedin.com/in/pratik-ghule92">Linkedin</a>
+				  <a href="https://linkedin.com/in/pratik-ghule98">Linkedin</a>
+				</li>
+				<li>
+				  <a href="https://facebook.com/pratik.ghule92">Facebook</a>
+				</li>
+				<li>
+				  <a href="https://www.youtube.com/channel/UCwQlpv4gM37Yz61Pdnn1yWw">Youtube</a>
 				</li>
 			</ul>
 		</div>
