--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				  <a href="https://facebook.com/pratik.ghule92">Facebook</a>
 				</li>
 				<li>
-				  <a href="https://github.com/pratikghule/Resumes/blob/master/resume.pdf">Resume</a>
+				  <a href="https://pratikghule.github.io/resume/">Resume</a>
 				</li>
 			</ul>
 		</div>
