--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Pratik Ghule</title>
+    <title>  
+	    < href="about.html"> Pratik Ghule </a>
+    </title>
     <link rel="stylesheet" type="text/css" href="style.css">  
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet"> 
   </head>
