--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>  
-	    < href="about.html"> Pratik Ghule </a>
+	    <a href="about.html"> Pratik Ghule </a>
     </title>
     <link rel="stylesheet" type="text/css" href="style.css">  
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet"> 
