--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>  
-	    <a href="http://pratikghule.me/about.html"> Pratik Ghule </a>
-    </title>
+    <title> Pratik Ghule </title>
     <link rel="stylesheet" type="text/css" href="style.css">  
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet"> 
   </head>
@@ -12,7 +10,9 @@
 	<div class="wrapper">
 		<div class="left">
 		  <img class="profile-pic" src="img/pic 1.jpg" width="200" />
-		  <h1 class="name">Pratik Ghule</h1>
+		  <h1 class="name">  
+			  <a href="http://pratikghule.me/about.html"> Pratik Ghule </a> 
+		  </h1>
 		  <h4 class="subtitle">CS Student</h4>
 		</div>
 		<div class="right">
