--- a/about.html
+++ b/about.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+
+  <link rel="stylesheet" href="css_about.css">
+</head>
+<body>
+
 <div class="about-section">
   <h1>About Me Page</h1>
   <p>  Hi ., I am Pratik Ghule ! </p>
@@ -17,37 +25,7 @@
   <a href="#" class="fa fa-facebook"> https://www.facebook.com/pratik.ghule.92 </a>
   <a href="#" class="fa fa-twitter"> https://twitter.com/PratikGhule98 </a>
 
-  <div class="social">
-        <script>
-                /* Style all font awesome icons */
-                .fa {
-                    padding: 20px;
-                    font-size: 30px;
-                    width: 50px;
-                    text-align: center;
-                    text-decoration: none;
-                }
-
-                /* Add a hover effect if you want */
-                .fa:hover {
-                    opacity: 0.7;
-                }
-
-                /* Set a specific color for each brand */
-
-                /* Facebook */
-                .fa-facebook {
-                    background: #3B5998;
-                    color: white;
-                }
-
-                /* Twitter */
-                .fa-twitter {
-                    background: #55ACEE;
-                    color: white;
-                }
-         </script>
-   </div>
-
-
 </div>
+
+</body>
+</html>
