--- a/about.html
+++ b/about.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
 <html>
-<head>
+	<head>
+		<link rel="stylesheet" href="css_about.css">
+	</head>
+	<body>
+		<div class="about-section">
+			<h1>About My Page</h1>
+			<p>  Hi ., I am Pratik Ghule! </p>
+			<p>  I am computer science student from Nashik,India. </p>
+			<p>  I am currently studying Msc computer science at Bytco college (Savitribai Phule Pune University) </p>
+			<p>  Am also a competitive coder and participated in competitions like  </p>
+			<div class="contest">
+				<p> Google Code Jam (since 2016) </p>
+				<p> Google Kickstart  </p>
+				<p> Facebook Hacker Cup (from 2020) </p>
+			</div>
+		</div>
 
-  <link rel="stylesheet" href="css_about.css">
-</head>
-<body>
+		<div class="social">
+			<!-- Add icon library -->
+			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<div class="about-section">
-  <h1>About Me Page</h1>
-  <p>  Hi ., I am Pratik Ghule ! </p>
-  <p>  I am computer science student from Nashik,India. </p>
-  <p>  I am currently studying Msc computer science at Bytco college (Savitribai Phule Pune University) </p>
-  <p>  Am also a competitive coder and participated in competitions like  </p>
-    <ul>
-      <li> Google Code Jam (since 2016) </li>
-      <li> Google Kickstart  </li>
-      <li> Facebook Hacker Cup (from 2020) </li>
-    </ul>  
-  
-  <!-- Add icon library -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+			<!-- Add font awesome icons -->
+			<a href="https://www.facebook.com/pratik.ghule.92" class="fa fa-facebook">  </a>
+			<a href="https://twitter.com/PratikGhule98" class="fa fa-twitter">  </a>
+			<a href="http://www.linkedin.com/in/pratik-ghule98" class="fa fa-linkedin"></a>
+			<a href="https://www.youtube.com/channel/UCwQlpv4gM37Yz61Pdnn1yWw" class="fa fa-youtube"></a>
+			<a href="https://www.instagram.com/pratik_ghule98/" class="fa fa-instagram"></a>
 
-  <!-- Add font awesome icons -->
-  <a href="#" class="fa fa-facebook"> https://www.facebook.com/pratik.ghule.92 </a>
-  <a href="#" class="fa fa-twitter"> https://twitter.com/PratikGhule98 </a>
-
-</div>
-
-</body>
+		</div>
+	</body>
 </html>
