--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <title> Pratik Ghule </title>
     <link rel="stylesheet" type="text/css" href="style.css">  
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet"> 
+	
+	  <!-- google ads -->
+	  
+	  <script data-ad-client="ca-pub-7818715380760440" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	  
+	  <!-- google ads -->
   </head>
   
   <body>
